# sam

./: .gitmodules  LICENSE  meson.build
avr/: display_rx.c  interactive_tx.c  lcd.c  lcd.h  meson.build  testtx.c  toolchain.ini  usart.c  usart.h
docs/: protocol.md
include/: bits.h  rx.h  tx.h
src/: bits.c  meson.build  rx.c  tx.c
tests/: meson.build  test_rx.cc  test_tx.cc
